kubernetes/application/relationship-service/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: relationship-service
  namespace: tomodachi-app
  labels:
    app: relationship-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: relationship-service
  template:
    metadata:
      labels:
        app: relationship-service
    spec:
      containers:
        - name: relationship-service
          # image: <REGISTRY>/relationship-service:latest
          image: k3d-registry.localhost:5500/relationship-service:v1.0.3
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
              name: http
          readinessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /health
              port: 8080
            initialDelaySeconds: 10
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
            limits:
              cpu: 500m
              memory: 512Mi
